--- a/app/assets/stylesheets/pdfjs_viewer/pdfjs/viewer.css
+++ b/app/assets/stylesheets/pdfjs_viewer/pdfjs/viewer.css
@@ -162,8 +162,7 @@
 }
 
 .pdfViewer .page .annotLink > a /* -ms-a */  {
-  background: url("data:image/gif;base64,R0lGODlhAQABAIAAAAAAAP///yH5BAEAAAAA\
-                   LAAAAAABAAEAAAIBRAA7") 0 0 repeat;
+  background: url("data:image/gif;base64,R0lGODlhAQABAIAAAAAAAP///yH5BAEAAAAALAAAAAABAAEAAAIBRAA7") 0 0 repeat;
 }
 
 * {
